--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
+/* universal selector set box and border */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* element selectors set bg to white green*/
 body {
     background-color: #d9dcd6;
 }
 
+/* header styles*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
