--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,19 +107,8 @@ p {
     max-width: 150px;
 }
 
-/* .benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-} */
-
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+.search-eng-opt, .online-rep-man, .social-med-mark {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -128,50 +117,25 @@ p {
     color: #ffffff;
 }
 
-/* .online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-} */
-
-.search-engine-optimization img {
+.search-eng-opt img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+.online-rep-man img {
     max-height: 200px;
 }
 
-.social-media-marketing img {
+.social-med-mark img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
+.search-eng-opt h2, .online-rep-man h2, .social-med-mark h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/* .online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-} */
 
 .footer {
     padding: 30px;
